core/components/shared/Dialog.module.css
.container {
  background: var(--ocean-gradient);
  border: var(--map-popup-border);
  border-radius: var(--map-popup-border-radius);
  box-shadow: var(--map-popup-box-shadow);
  max-width: clamp(12.5rem, 33vw + 10vw, 20rem);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-sizing: border-box;
}

.headerContainer {
  display: grid;
  grid-template-columns: 1fr auto;
  align-items: center;
  overflow: hidden;
  gap: 0.25rem;
  padding: 1rem;
  border-bottom: var(--accent-border);
  border-radius: var(--map-popup-border-radius) var(--map-popup-border-radius) 0
    0;
}

.headerText {
  text-overflow: ellipsis;
  font-size: 1.625rem;
  font-weight: var(--map-h2-font-weight);
  color: #fff;
}

.closeButton {
  all: unset;
  width: 1rem;
  height: 1rem;
  cursor: pointer;
  filter: invert(1);
}

.contentContainer {
  background: var(--map-popup-background-color);
  padding: var(--map-popup-content-padding);
  border-radius: 0 0 var(--map-popup-border-radius)
    var(--map-popup-border-radius);
  padding: var(--map-popup-content-padding);
  box-shadow: var(--map-popup-box-shadow-inner);
  overflow: hidden;
}

.content {
  overflow-y: auto;
}

